--- a/backend/SMIS_API/appsettings.json
+++ b/backend/SMIS_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=CYDEO-061-L;Initial Catalog=SMIS_DB;Integrated Security=True;Pooling=False"
+    "DefaultConnection": "Data Source=JON-VOKSHI;Initial Catalog=SMIS_DB;Integrated Security=True;Pooling=False"
   }
 }
